# Sci-shot

./: Cargo.toml  LICENSE
.github/workflows/: rust.yml
src/: main.rs  point_handling.rs
