[package]
name = "sci-shot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = {version = "0.27.2", features = [
    "default",
    "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
] }

egui = "0.27.2"
egui_extras = "0.27.2"
env_logger = "0.11.3"
image = "0.25.1"
ordered-float = "4.2.0"
rand = "0.8.5"
xcap = "0.0.9"


[profile.small]
inherits = "release"
opt-level = "z"
lto = true
strip = true
codegen-units = 1
